add: new notebooks

--- a/cookbook/keyboard_test.ipynb
+++ b/cookbook/keyboard_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,9 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Point(x=901, y=447)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pyautogui.position()"
    ]
@@ -43,9 +54,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Point(x=1094, y=226)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pyautogui.position()"
    ]
@@ -69,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,11 +109,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyautogui.vscroll(200)"
+    "pyautogui.vscroll(-500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyautogui.click()\n",
+    "time.sleep(0.1)\n",
+    "pyautogui.scroll(-500)"
    ]
   },
   {
@@ -198,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,12 +285,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(5):\n",
-    "    pyautogui.hotkey(\"volumeup\")"
+    "pyautogui.hotkey(\"volumeup\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(10):\n",
+    "    pyautogui.hotkey(\"volumedown\")"
    ]
   },
   {
@@ -269,11 +311,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "pyautogui.hotkey(\"playpause\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyautogui.click()\n",
+    "time.sleep(0.25)\n",
+    "pyautogui.hotkey(\"pgdn\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyautogui.click()\n",
+    "time.sleep(0.25)\n",
+    "pyautogui.hotkey(\"browserforward\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyautogui.click()\n",
+    "time.sleep(0.25)\n",
+    "pyautogui.hotkey(\"browserback\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyautogui.click()\n",
+    "time.sleep(0.25)\n",
+    "name = pyautogui.getActiveWindowTitle()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = name.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "power\n"
+     ]
+    }
+   ],
+   "source": [
+    "pyautogui.click()\n",
+    "time.sleep(0.25)\n",
+    "active_window_full_name = pyautogui.getActiveWindowTitle()\n",
+    "\n",
+    "names = active_window_full_name.lower().split()\n",
+    "\n",
+    "if \"edge\" in names:\n",
+    "    pyautogui.hotkey(\"browserback\")\n",
+    "\n",
+    "if \"powerpoint\" in names:\n",
+    "    print(\"power\")\n",
+    "    pyautogui.hotkey(\"pgdn\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['robocopy_documento_tecnico.pptx', '-', 'powerpoint']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names"
    ]
   }
  ],
