--- a/express_model_randomforest.ipynb
+++ b/express_model_randomforest.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"data/randomized/train_data\", \"rb\") as f:\n",
+    "with open(\"data/express/train_data\", \"rb\") as f:\n",
     "    train_data = pickle.load(f)\n",
     "\n",
     "train_features = train_data[0]\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "RandomForestClassifier(bootstrap=False)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,9 +118,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy is 97.48%\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0     1.0000    0.9922    0.9961       128\n",
+      "           1     0.9927    1.0000    0.9963       136\n",
+      "           2     0.9856    1.0000    0.9928       137\n",
+      "           3     0.9908    0.9643    0.9774       112\n",
+      "           4     0.9933    0.9933    0.9933       150\n",
+      "           5     0.9910    0.9821    0.9865       112\n",
+      "           6     1.0000    1.0000    1.0000       166\n",
+      "           7     0.9852    1.0000    0.9925       133\n",
+      "           8     0.9917    0.8322    0.9049       143\n",
+      "           9     0.8397    0.9850    0.9066       133\n",
+      "\n",
+      "    accuracy                         0.9748      1350\n",
+      "   macro avg     0.9770    0.9749    0.9746      1350\n",
+      "weighted avg     0.9774    0.9748    0.9748      1350\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -137,7 +161,7 @@
          "yaxis": "y",
          "z": [
           [
-           126,
+           127,
            0,
            1,
            0,
@@ -145,7 +169,7 @@
            0,
            0,
            0,
-           1,
+           0,
            0
           ],
           [
@@ -176,20 +200,20 @@
            0,
            0,
            0,
-           110,
+           108,
            0,
            0,
            0,
-           0,
+           2,
            1,
            1
           ],
           [
            0,
            0,
+           1,
            0,
-           0,
-           150,
+           149,
            0,
            0,
            0,
@@ -241,20 +265,20 @@
            0,
            0,
            0,
-           143,
-           0
+           119,
+           24
           ],
           [
            0,
            0,
            0,
            0,
-           0,
+           1,
            1,
            0,
            0,
            0,
-           132
+           131
           ]
          ]
         }
@@ -1173,9 +1197,9 @@
     "acc = accuracy_score(y_true=test_targets, y_pred=predictions)\n",
     "accuracy = round(acc, 4)\n",
     "\n",
-    "# print(f\"The accuracy is {round(accuracy*100, 4)}%\")\n",
+    "print(f\"The accuracy is {round(accuracy*100, 4)}%\")\n",
     "\n",
-    "# print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
+    "print(classification_report(y_true=test_targets, y_pred=predictions, digits=4))\n",
     "\n",
     "conf_matrix = confusion_matrix(y_true=test_targets, y_pred=predictions)\n",
     "px.imshow(conf_matrix, color_continuous_scale=\"turbo\")"
@@ -1194,7 +1218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"models/decision_tree\", \"wb\") as f:\n",
+    "with open(\"models/express_decision_tree\", \"wb\") as f:\n",
     "    pickle.dump(rf_model, f)"
    ]
   }
