--- a/express_data_preprocessing.ipynb
+++ b/express_data_preprocessing.ipynb
@@ -154,21 +154,17 @@
     "num_samples = len(norm_features)\n",
     "percentage = 0.7\n",
     "\n",
-    "train_features = norm_features[: int(percentage*num_samples)]\n",
-    "train_targets  = targets[: int(percentage*num_samples)]\n",
-    "\n",
-    "test_features = norm_features[int(percentage*num_samples): ]\n",
-    "test_targets  = targets[int(percentage*num_samples): ]\n"
+    "train_features = norm_features\n",
+    "train_targets  = targets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = [train_features, train_targets]\n",
-    "test_data  = [test_features, test_targets]"
+    "train_data = [train_features, train_targets]"
    ]
   },
   {
@@ -180,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -220,16 +216,16 @@
          ],
          "xaxis": "x",
          "y": [
-          3157,
-          3136,
-          3138,
-          3174,
-          3090,
-          3153,
-          3147,
-          3171,
-          3169,
-          3185
+          4503,
+          4503,
+          4503,
+          4503,
+          4503,
+          4503,
+          4503,
+          4503,
+          4503,
+          4503
          ],
          "yaxis": "y"
         }
@@ -1113,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1176,15 +1172,15 @@
          ],
          "xaxis": "x",
          "y": [
-          3090,
-          3090,
-          3090,
-          3090,
-          3090,
-          3090,
-          3090,
-          3090,
-          3090
+          4503,
+          4503,
+          4503,
+          4503,
+          4503,
+          4503,
+          4503,
+          4503,
+          4503
          ],
          "yaxis": "y"
         }
@@ -2061,7 +2057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2077,21 +2073,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"data/express/train_data\", \"wb\") as f:\n",
-    "    pickle.dump(balanced_train_data, f)\n",
-    "\n",
-    "with open(\"data/express/test_data\", \"wb\") as f:\n",
-    "    pickle.dump(test_data, f)"
+    "    pickle.dump(balanced_train_data, f)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('kotoamatsukami-Hq7iVI3N-py3.8')",
+   "display_name": "Python 3.8.8 ('kotoamatsukami-T53X9OZe-py3.8')",
    "language": "python",
    "name": "python3"
   },
@@ -2110,7 +2103,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "36e694ef7c3cc3ea9fcbe33622def963131e2f8f250b2d91c3914ff84d9031bf"
+    "hash": "a51161d7ba46dd3dbd9fc8c6bd348fb23b578d1cf3ae09598f24443a1428645a"
    }
   }
  },
